Fixes search result dropdown width on mobile view

--- a/src/styles/_landingHeroStyles.scss
+++ b/src/styles/_landingHeroStyles.scss
@@ -191,7 +191,7 @@
         z-index: 1000;
 
         @include for-phone-only {
-          width: 365px;
+          width: 100%;
         }
 
         @include for-tablet-portrait-up {
